test do not need CMakeLists.txt change to run

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,57 +1,18 @@
 cmake_minimum_required(VERSION 3.2)
 project(LiveOV7670)
 
-# Use fake Arduino methods and definitions when building tests
-#set(OV7670_BUILD_FOR_TESTS true)
-if (OV7670_BUILD_FOR_TESTS)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-    include_directories(test/fake)
-else()
-    include(CMakeListsPrivate.txt)
-endif()
 
-add_definitions(-DF_CPU=16000000L)
-add_definitions(-DARDUINO_ARCH_AVR)
-add_definitions(-DARDUINO_AVR_NANO)
-add_definitions(-DARDUINO=10608)
-add_definitions(-DPLATFORMIO=020806)
-add_definitions(-D__AVR_ATmega328P__)
 
-add_custom_target(
-    PLATFORMIO_BUILD ALL
-    COMMAND ${PLATFORMIO_CMD} -f -c clion run
-    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-)
 
-add_custom_target(
-    PLATFORMIO_UPLOAD ALL
-    COMMAND ${PLATFORMIO_CMD} -f -c clion run --target upload
-    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-)
+add_subdirectory(arduino)
 
-add_custom_target(
-    PLATFORMIO_CLEAN ALL
-    COMMAND ${PLATFORMIO_CMD} -f -c clion run --target clean
-    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-)
 
-add_custom_target(
-    PLATFORMIO_PROGRAM ALL
-    COMMAND ${PLATFORMIO_CMD} -f -c clion run --target program
-    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-)
-
-add_custom_target(
-    PLATFORMIO_UPLOADFS ALL
-    COMMAND ${PLATFORMIO_CMD} -f -c clion run --target uploadfs
-    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-)
-
-add_custom_target(
-    PLATFORMIO_UPDATE_ALL ALL
-    COMMAND ${PLATFORMIO_CMD} -f -c clion update
-    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-)
-
-add_subdirectory(src)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+include_directories(test/fake)
+add_subdirectory(arduino/src)
 add_subdirectory(test)
+
+
+
+
+
