removed generated files from git

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,7 @@ cmake_minimum_required(VERSION 3.2)
 project(LiveOV7670)
 
 
-
-
+# Must init platformio. See: PlatformIO_CLion_init.txt
 add_subdirectory(arduino)
 
 
@@ -11,8 +10,6 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 include_directories(test/fake)
 add_subdirectory(arduino/src)
 add_subdirectory(test)
-
-
 
 
 
