Simplified CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,14 +8,44 @@ add_subdirectory(arduino)
 
 
 
+
 # init Google Test target
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-# include fake arduino definitsion and functions
+
+# fake arduino headers
 include_directories(test/fake)
-# include module to be tested
-add_subdirectory(arduino/src)
-# include tests
-add_subdirectory(test)
+# project headers
+include_directories(arduino/src)
+# gtest headers
+include_directories(${gtest_SOURCE_DIR}/include)
+
+
+
+add_executable(runTests
+        test/fake/Arduino.cpp
+        test/fake/Wire.cpp
+        test/fake/OV7670Simulator.cpp
+
+        arduino/src/camera/base/CameraOV7670.cpp
+        arduino/src/camera/base/CameraOV7670Registers.cpp
+        arduino/src/camera/base/CameraOV7670RegistersDefault.cpp
+        arduino/src/camera/base/CameraOV7670RegistersQQVGA.cpp
+        arduino/src/camera/base/CameraOV7670RegistersQVGA.cpp
+        arduino/src/camera/base/CameraOV7670RegistersVGA.cpp
+        arduino/src/camera/base/CameraOV7670RegistersRGB565.cpp
+        arduino/src/camera/base/CameraOV7670RegistersBayerRGB.cpp
+        arduino/src/camera/base/CameraOV7670RegistersYUV422.cpp
+
+        test/src/camera/base/TestCameraOV7670.cpp
+        test/src/camera/base/TestCameraOV7670Registers.cpp
+        test/src/camera/buffered/TestBufferedCameraOV7670.cpp
+        )
+
+# link
+add_subdirectory(test/lib/gtest-1.7.0)
+target_link_libraries(runTests gtest_main)
+
+
 
 
 
