renamed folders to be more Arduino compatible

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,8 +15,8 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 # fake arduino headers
 include_directories(test/fake)
 # project headers
-include_directories(arduino/lib)
-include_directories(arduino/src)
+include_directories(arduino/libraries)
+include_directories(arduino/LiveOV7670)
 # gtest headers
 include_directories(${gtest_SOURCE_DIR}/include)
 
@@ -27,15 +27,15 @@ add_executable(runTests
         test/fake/Wire.cpp
         test/fake/OV7670Simulator.cpp
 
-        arduino/lib/LiveOV7670Library/CameraOV7670.cpp
-        arduino/lib/LiveOV7670Library/CameraOV7670Registers.cpp
-        arduino/lib/LiveOV7670Library/CameraOV7670RegistersDefault.cpp
-        arduino/lib/LiveOV7670Library/CameraOV7670RegistersQQVGA.cpp
-        arduino/lib/LiveOV7670Library/CameraOV7670RegistersQVGA.cpp
-        arduino/lib/LiveOV7670Library/CameraOV7670RegistersVGA.cpp
-        arduino/lib/LiveOV7670Library/CameraOV7670RegistersRGB565.cpp
-        arduino/lib/LiveOV7670Library/CameraOV7670RegistersBayerRGB.cpp
-        arduino/lib/LiveOV7670Library/CameraOV7670RegistersYUV422.cpp
+        arduino/libraries/LiveOV7670Library/CameraOV7670.cpp
+        arduino/libraries/LiveOV7670Library/CameraOV7670Registers.cpp
+        arduino/libraries/LiveOV7670Library/CameraOV7670RegistersDefault.cpp
+        arduino/libraries/LiveOV7670Library/CameraOV7670RegistersQQVGA.cpp
+        arduino/libraries/LiveOV7670Library/CameraOV7670RegistersQVGA.cpp
+        arduino/libraries/LiveOV7670Library/CameraOV7670RegistersVGA.cpp
+        arduino/libraries/LiveOV7670Library/CameraOV7670RegistersRGB565.cpp
+        arduino/libraries/LiveOV7670Library/CameraOV7670RegistersBayerRGB.cpp
+        arduino/libraries/LiveOV7670Library/CameraOV7670RegistersYUV422.cpp
 
         test/src/camera/base/TestCameraOV7670.cpp
         test/src/camera/base/TestCameraOV7670Registers.cpp
