--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(LiveOV7670)
 
 # PlatformIO build targets
 # Must init platformio. See: PlatformIO_CLion_init.txt
-add_subdirectory(arduino)
+add_subdirectory(src)
 
 
 
@@ -15,8 +15,8 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 # fake arduino headers
 include_directories(test/fake)
 # project headers
-include_directories(arduino/libraries)
-include_directories(arduino/LiveOV7670)
+include_directories(src/lib)
+include_directories(src/LiveOV7670)
 # gtest headers
 include_directories(${gtest_SOURCE_DIR}/include)
 
@@ -27,15 +27,15 @@ add_executable(runTests
         test/fake/Wire.cpp
         test/fake/OV7670Simulator.cpp
 
-        arduino/libraries/LiveOV7670Library/CameraOV7670.cpp
-        arduino/libraries/LiveOV7670Library/CameraOV7670Registers.cpp
-        arduino/libraries/LiveOV7670Library/CameraOV7670RegistersDefault.cpp
-        arduino/libraries/LiveOV7670Library/CameraOV7670RegistersQQVGA.cpp
-        arduino/libraries/LiveOV7670Library/CameraOV7670RegistersQVGA.cpp
-        arduino/libraries/LiveOV7670Library/CameraOV7670RegistersVGA.cpp
-        arduino/libraries/LiveOV7670Library/CameraOV7670RegistersRGB565.cpp
-        arduino/libraries/LiveOV7670Library/CameraOV7670RegistersBayerRGB.cpp
-        arduino/libraries/LiveOV7670Library/CameraOV7670RegistersYUV422.cpp
+        src/lib/LiveOV7670Library/CameraOV7670.cpp
+        src/lib/LiveOV7670Library/CameraOV7670Registers.cpp
+        src/lib/LiveOV7670Library/CameraOV7670RegistersDefault.cpp
+        src/lib/LiveOV7670Library/CameraOV7670RegistersQQVGA.cpp
+        src/lib/LiveOV7670Library/CameraOV7670RegistersQVGA.cpp
+        src/lib/LiveOV7670Library/CameraOV7670RegistersVGA.cpp
+        src/lib/LiveOV7670Library/CameraOV7670RegistersRGB565.cpp
+        src/lib/LiveOV7670Library/CameraOV7670RegistersBayerRGB.cpp
+        src/lib/LiveOV7670Library/CameraOV7670RegistersYUV422.cpp
 
         test/src/camera/base/TestCameraOV7670.cpp
         test/src/camera/base/TestCameraOV7670Registers.cpp
