Configuration for Arduino Mega (added screen support)

--- a/src/platformio.ini
+++ b/src/platformio.ini
@@ -21,7 +21,9 @@
 src_dir = LiveOV7670
 
 [env:nanoatmega328]
+#[env:megaatmega2560]
 platform = atmelavr
 framework = arduino
 board = nanoatmega328
+#board = megaatmega2560
 
